--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="utf-8" />
     
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     -->
    
-    
+  
     <title>وين ناكل؟</title>
   </head>
   
